--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     <a href="#">Destinations</a>
                 </li>
                 <li>
-                    <a href="#">activities</a>
+                    <a href="#">Activities</a>
                 </li>
                 <li>
                     <a href="#">USD</a>
@@ -39,6 +39,91 @@
         </nav>
     </header>
     <main>
+        <section class="section-center">
+            <div class="banner">
+
+                <div class="caixa-elementos-banner">
+
+                    <div class="caixa-titulo-banner">
+                        <p class="titulo-banner">
+                            Your world of joy
+                        </p>
+                        <p class="texto-banner">
+                            From local escapes to far-flung adventures, find what makes you happy anytime, anywhere
+                        </p>
+                    </div>
+
+
+                    <div class="opcoes-pesquisa">
+                        <div class="onde">
+                            <div class="quadrado"></div>
+                            <div class="caixa-subtexto-banner">
+                                <p class="titulo-pesquisa">Where</p>
+                                <p class="texto-pesquisa">Seach destinations</p>
+                            </div>
+
+                        </div>
+
+                        <div class="quando">
+                            <div class="quadrado"></div>
+                            <div class="caixa-subtexto-banner">
+                                <p class="titulo-pesquisa">When</p>
+                                <p class="texto-pesquisa">February 05 ~ March 14</p>
+                            </div>
+                        </div>
+
+                        <div class="tipo">
+                            <div class="quadrado"></div>
+                            <div class="caixa-subtexto-banner">
+                                <p class="titulo-pesquisa">Tour Type</p>
+                                <p class="texto-pesquisa">All tour</p>
+                            </div>
+                        </div>
+                        <button class="btn-search">Search</button>
+                    </div>
+
+                </div>
+
+            </div>
+        </section>
+        <section>
+            <div class="estrutura-titulo">
+                <p class="titulo-primario">
+                    Why choose Tourz
+                </p>
+            </div>
+
+            <div class="caixa-qualidades">
+
+                <div class="flexibilidade">
+                    <i class="bi bi-ticket-perforated"></i>
+                    <p class="titulo-qualidades">Ultimate flexibility</p>
+                    <p class="texto-qualidades">You're in control, with free
+                        cancellation and payment options to
+                        satisfy any plan or budget.</p>
+                </div>
+                <div class="experiencias">
+                    <i class="bi bi-airplane-engines"></i>
+                    <p class="titulo-qualidades">Memorable experiences</p>
+                    <p class="texto-qualidades">Browse and book tours and activities
+                        so incredible, you'll want to tell your
+                        friends.</p>
+                </div>
+                <div class="qualidade">
+                    <i class="bi bi-gem"></i>
+                    <p class="titulo-qualidades">Quality at our core</p>
+                    <p class="texto-qualidades">High-quality standards. Millions of
+                        reviews. A tourz company.</p>
+                </div>
+                <div class="premios">
+                    <i class="bi bi-award"></i>
+                    <p class="titulo-qualidades">Award-winning support</p>
+                    <p class="texto-qualidades">New price? New plan? No problem.
+                        We're here to help, 24/7.</p>
+                </div>
+
+            </div>
+        </section>
 
     </main>
     <footer>
