atualizando meio do site

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>viagens</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+
+
 </head>
 
 <body>
@@ -86,45 +88,217 @@
 
             </div>
         </section>
-        <section>
-            <div class="estrutura-titulo">
-                <p class="titulo-primario">
-                    Why choose Tourz
-                </p>
+        <section class="section-mid">
+            <div class="dercerto">
+                <div class="estrutura-titulo">
+                    <p class="titulo-primario">
+                        Why choose Tourz
+                    </p>
+                </div>
+
+                <div class="caixa-qualidades">
+
+                    <div class="qualidades">
+                        <i class="bi bi-ticket-perforated"></i>
+                        <p class="titulo-qualidades">Ultimate flexibility</p>
+                        <p class="texto-qualidades">You're in control, with free
+                            cancellation and payment options to
+                            satisfy any plan or budget.</p>
+                    </div>
+                    <div class="qualidades">
+                        <i class="bi bi-airplane-engines"></i>
+                        <p class="titulo-qualidades">Memorable experiences</p>
+                        <p class="texto-qualidades">Browse and book tours and activities
+                            so incredible, you'll want to tell your
+                            friends.</p>
+                    </div>
+                    <div class="qualidades">
+                        <i class="bi bi-gem"></i>
+                        <p class="titulo-qualidades">Quality at our core</p>
+                        <p class="texto-qualidades">High-quality standards. Millions of
+                            reviews. A tourz company.</p>
+                    </div>
+                    <div class="qualidades">
+                        <i class="bi bi-award"></i>
+                        <p class="titulo-qualidades">Award-winning support</p>
+                        <p class="texto-qualidades">New price? New plan? No problem.
+                            We're here to help, 24/7.</p>
+                    </div>
+
+                </div>
+
             </div>
 
-            <div class="caixa-qualidades">
-
-                <div class="flexibilidade">
-                    <i class="bi bi-ticket-perforated"></i>
-                    <p class="titulo-qualidades">Ultimate flexibility</p>
-                    <p class="texto-qualidades">You're in control, with free
-                        cancellation and payment options to
-                        satisfy any plan or budget.</p>
-                </div>
-                <div class="experiencias">
-                    <i class="bi bi-airplane-engines"></i>
-                    <p class="titulo-qualidades">Memorable experiences</p>
-                    <p class="texto-qualidades">Browse and book tours and activities
-                        so incredible, you'll want to tell your
-                        friends.</p>
-                </div>
-                <div class="qualidade">
-                    <i class="bi bi-gem"></i>
-                    <p class="titulo-qualidades">Quality at our core</p>
-                    <p class="texto-qualidades">High-quality standards. Millions of
-                        reviews. A tourz company.</p>
-                </div>
-                <div class="premios">
-                    <i class="bi bi-award"></i>
-                    <p class="titulo-qualidades">Award-winning support</p>
-                    <p class="texto-qualidades">New price? New plan? No problem.
-                        We're here to help, 24/7.</p>
-                </div>
-
-            </div>
         </section>
+        <section class="section-low">
+            <div class="deucerto">
+                <div class="estrutura-titulo">
+                    <p class="titulo-primario">
+                        Trending destinations
+                    </p>
+                </div>
 
+                <div class="caixa-destinos">
+                    <div class="destinos">
+                        <img class="img-destinos" src="./assets/image.png" alt="">
+                        <p class="titulo-qualidades">Paris</p>
+                        <p class="texto-qualidades">100+ Tours</p>
+                    </div>
+                    <div class="destinos">
+                        <img class="img-destinos" src="./assets/image (1).png" alt="">
+                        <p class="titulo-qualidades">Singapore</p>
+                        <p class="texto-qualidades">300+ Tours</p>
+                    </div>
+                    <div class="destinos">
+                        <img class="img-destinos" src="./assets/image (2).png" alt="">
+                        <p class="titulo-qualidades">Roma</p>
+                        <p class="texto-qualidades">400+ Tours</p>
+                    </div>
+                    <div class="destinos">
+                        <img class="img-destinos" src="./assets/image (3).png" alt="">
+                        <p class="titulo-qualidades">Bangkok</p>
+                        <p class="texto-qualidades">100+ Tours</p>
+                    </div>
+                    <div class="destinos">
+                        <img class="img-destinos" src="./assets/image (4).png" alt="">
+                        <p class="titulo-qualidades">Bail</p>
+                        <p class="texto-qualidades">600+ Tours</p>
+                    </div>
+                    <div class="destinos">
+                        <img class="img-destinos" src="./assets/image (5).png" alt="">
+                        <p class="titulo-qualidades">Phuket</p>
+                        <p class="texto-qualidades">200+ Tours</p>
+                    </div>
+                    <div class="destinos">
+                        <img class="img-destinos" src="./assets/image (6).png" alt="">
+                        <p class="titulo-qualidades">Tokyo</p>
+                        <p class="texto-qualidades">700+ Tours</p>
+                    </div>
+                    <div class="destinos">
+                        <img class="img-destinos" src="./assets/image (7).png" alt="">
+                        <p class="titulo-qualidades">Cappadocia</p>
+                        <p class="texto-qualidades">900+ Tours</p>
+                    </div>
+                </div>
+            </div>
+
+        </section>
+        <section class="section-bottom">
+            <div class="continuacerto">
+                <div class="estrutura-titulo">
+                    <p class="titulo-primario">
+                        Find Popular Tours
+                    </p>
+                </div>
+                <div class="caixa-cards">
+                    <div class="card-popular">
+
+                        <div class="caixa-img-popular"><img class="img-popular" src="./assets/popular (1).png" alt="">
+                        </div>
+                        <div class="caixa-texto-card">
+
+                            <div class="localidade-card">
+                                <p class="texto-qualidades">Paris, France</p>
+                            </div>
+
+                            <p class="titulo-card">Centipede Tour - Guided Arizona Desert Tour by ATV</p>
+                            <p class="subtexo-card">4.8(243)</p>
+                            <hr>
+
+                            <div class="bottom-card">
+                                <p class="subtexo-card">4 day</p>
+                                <div class="caixa-preco">
+                                    <p class="subtexo-card">From</p>
+                                    <p class="preco-card">$189.25</p>
+                                </div>
+                            </div>
+
+                        </div>
+
+
+                    </div>
+
+                    <div class="card-popular">
+
+                        <div class="caixa-img-popular"><img class="img-popular" src="./assets/popular (2).png" alt="">
+                        </div>
+                        <div class="caixa-texto-card">
+
+                            <div class="localidade-card">
+                                <p class="texto-qualidades">New York, USA</p>
+                            </div>
+
+                            <p class="titulo-card">Molokini and Turtle Town
+                                Snorkeling Adventure Aboard</p>
+                            <p class="subtexo-card">4.8(243)</p>
+                            <hr>
+
+                            <div class="bottom-card">
+                                <p class="subtexo-card">4 day</p>
+                                <div class="caixa-preco">
+                                    <p class="subtexo-card">From</p>
+                                    <p class="preco-card">$225</p>
+                                </div>
+                            </div>
+
+                        </div>
+                    </div>
+
+                    <div class="card-popular">
+
+                        <div class="caixa-img-popular"><img class="img-popular" src="./assets/popular (3).png" alt="">
+                        </div>
+                        <div class="caixa-texto-card">
+
+                            <div class="localidade-card">
+                                <p class="texto-qualidades">London, UK</p>
+                            </div>
+
+                            <p class="titulo-card">Westminster Walking Tour &
+                                Westminster Abbey Entry</p>
+                            <p class="subtexo-card">4.8(243)</p>
+                            <hr>
+
+                            <div class="bottom-card">
+                                <p class="subtexo-card">4 day</p>
+                                <div class="caixa-preco">
+                                    <p class="subtexo-card">From</p>
+                                    <p class="preco-card">$945</p>
+                                </div>
+                            </div>
+
+                        </div>
+
+
+
+                    </div>
+
+                    <div class="card-popular">
+
+                        <div class="caixa-img-popular"><img class="img-popular" src="./assets/popular (4).png" alt="">
+                        </div>
+                        <div class="caixa-texto-card">
+
+                            <div class="localidade-card">
+                                <p class="texto-qualidades">Paris, France</p>
+                            </div>
+
+                            <p class="titulo-card">All Inclusive Ultimate Circle Island
+                                Day Tour with Lunch</p>
+                            <p class="subtexo-card">4.8(243)</p>
+                            <hr>
+
+                            <div class="bottom-card">
+                                <p class="subtexo-card">4 day</p>
+                                <div class="caixa-preco">
+                                    <p class="subtexo-card">From</p>
+                                    <p class="preco-card">$771</p>
+                                </div>
+                            </div>
+
+                        </div>
+
+        </section>
     </main>
     <footer>
 
