--- a/index.html
+++ b/index.html
@@ -14,12 +14,13 @@
 <body>
     <header>
         <nav class="menu">
-            <div>
+            <div class="logo-pesquisa">
                 <img class="logo" src="./assets/logo.svg fill.png" alt="">
+                <div class="caixa-pesquisa">
+                    <input  type="text" id="barra-pesquisa" placeholder="Search destinations or activities">
+                </div>
             </div>
-            <div class="caixa-pesquisa">
-                <p class="texto-pesquisa">Search destinations or activities</p>
-            </div>
+            
             <ul class="menu-lista">
                 <li>
                     <a href="#">Destinations</a>
@@ -33,9 +34,9 @@
                 <li>
                     <a href="#">Sing up</a>
                 </li>
-                <li class="caixa-login">
-                    <a class="texto-login" href="#">Log in</a>
-                </li>
+                <div class="caixa-login">
+                    <button class="texto-login">Log in</button>
+                </div>
             </ul>
 
         </nav>
@@ -198,7 +199,7 @@
                         <div class="caixa-texto-card">
 
                             <div class="localidade-card">
-                                <p class="texto-qualidades">Paris, France</p>
+                                <p class="texto-localidade-card">Paris, France</p>
                             </div>
 
                             <p class="titulo-card">Centipede Tour - Guided Arizona Desert Tour by ATV</p>
@@ -225,7 +226,7 @@
                         <div class="caixa-texto-card">
 
                             <div class="localidade-card">
-                                <p class="texto-qualidades">New York, USA</p>
+                                <p class="texto-localidade-card">New York, USA</p>
                             </div>
 
                             <p class="titulo-card">Molokini and Turtle Town
@@ -251,7 +252,7 @@
                         <div class="caixa-texto-card">
 
                             <div class="localidade-card">
-                                <p class="texto-qualidades">London, UK</p>
+                                <p class="texto-localidade-card">London, UK</p>
                             </div>
 
                             <p class="titulo-card">Westminster Walking Tour &
@@ -280,7 +281,7 @@
                         <div class="caixa-texto-card">
 
                             <div class="localidade-card">
-                                <p class="texto-qualidades">Paris, France</p>
+                                <p class="texto-localidade-card">Paris, France</p>
                             </div>
 
                             <p class="titulo-card">All Inclusive Ultimate Circle Island
@@ -297,7 +298,118 @@
                             </div>
 
                         </div>
+                    </div>
+                    <div class="card-popular">
 
+                        <div class="caixa-img-popular"><img class="img-popular" src="./assets/popular (5).png" alt="">
+                        </div>
+                        <div class="caixa-texto-card">
+
+                            <div class="localidade-card">
+                                <p class="texto-localidade-card">Paris, France</p>
+                            </div>
+
+                            <p class="titulo-card">Space Center Houston Admission
+                                Ticket</p>
+                            <p class="subtexo-card">4.8(243)</p>
+                            <hr>
+
+                            <div class="bottom-card">
+                                <p class="subtexo-card">4 day</p>
+                                <div class="caixa-preco">
+                                    <p class="subtexo-card">From</p>
+                                    <p class="preco-card">$189.25</p>
+                                </div>
+                            </div>
+
+                        </div>
+                    </div>
+
+                    <div class="card-popular">
+
+                        <div class="caixa-img-popular"><img class="img-popular" src="./assets/popular (6).png" alt="">
+                        </div>
+                        <div class="caixa-texto-card">
+
+                            <div class="localidade-card">
+                                <p class="texto-localidade-card">New York, USA</p>
+                            </div>
+
+                            <p class="titulo-card">Clear Kayak Tour of Shell Key
+                                Preserve and Tampa Bay Area</p>
+                            <p class="subtexo-card">4.8(243)</p>
+                            <hr>
+
+                            <div class="bottom-card">
+                                <p class="subtexo-card">4 day</p>
+                                <div class="caixa-preco">
+                                    <p class="subtexo-card">From</p>
+                                    <p class="preco-card">$255</p>
+                                </div>
+                            </div>
+
+                        </div>
+                    </div>
+
+                    <div class="card-popular">
+
+                        <div class="caixa-img-popular"><img class="img-popular" src="./assets/popular (7).png" alt="">
+                        </div>
+                        <div class="caixa-texto-card">
+
+                            <div class="localidade-card">
+                                <p class="texto-localidade-card">London, UK</p>
+                            </div>
+
+                            <p class="titulo-card">History and Hauntings of Salem
+                                Guided Walking Tour</p>
+                            <p class="subtexo-card">4.8(243)</p>
+                            <hr>
+
+                            <div class="bottom-card">
+                                <p class="subtexo-card">4 day</p>
+                                <div class="caixa-preco">
+                                    <p class="subtexo-card">From</p>
+                                    <p class="preco-card">$943</p>
+                                </div>
+                            </div>
+
+                        </div>
+                    </div>
+
+
+                    <div class="card-popular">
+
+                        <div class="caixa-img-popular"><img class="img-popular" src="./assets/popular (8).png" alt="">
+                        </div>
+                        <div class="caixa-texto-card">
+
+                            <div class="localidade-card">
+                                <p class="texto-localidade-card">New York, USA</p>
+                            </div>
+
+                            <p class="titulo-card">Mauna Kea Summit Sunset and
+                                Stars Free Astro Photos Hilo Kona
+                                Waikoloa Pick Up</p>
+                            <p class="subtexo-card">4.8(243)</p>
+                            <hr>
+
+                            <div class="bottom-card">
+                                <p class="subtexo-card">4 day</p>
+                                <div class="caixa-preco">
+                                    <p class="subtexo-card">From</p>
+                                    <p class="preco-card">$771</p>
+                                </div>
+                            </div>
+
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+        </section>
+        <section class="section-desconto">
+            
         </section>
     </main>
     <footer>
