--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
     <header>
         <nav class="menu">
             <div class="logo-pesquisa">
-                <img class="logo" src="./assets/logo.svg fill.png" alt="">
+                <img class="logo" src="./assets/img/logo.svg fill.png" alt="">
                 <div class="caixa-pesquisa">
-                    <input  type="text" id="barra-pesquisa" placeholder="Search destinations or activities">
+                    <input type="text" id="barra-pesquisa" placeholder="Search destinations or activities">
                 </div>
             </div>
-            
+
             <ul class="menu-lista">
                 <li>
                     <a href="#">Destinations</a>
@@ -71,7 +71,7 @@
                             <div class="quadrado"></div>
                             <div class="caixa-subtexto-banner">
                                 <p class="titulo-pesquisa">When</p>
-                                <p class="texto-pesquisa">February 05 ~ March 14</p>
+                                <p class="texto-pesquisa-data">February 05 ~ March 14</p>
                             </div>
                         </div>
 
@@ -137,46 +137,49 @@
                     <p class="titulo-primario">
                         Trending destinations
                     </p>
+                    <p class="veja-tudo">
+                        See all
+                    </p>
                 </div>
 
                 <div class="caixa-destinos">
                     <div class="destinos">
-                        <img class="img-destinos" src="./assets/image.png" alt="">
+                        <img class="img-destinos" src="./assets/img/image.png" alt="">
                         <p class="titulo-qualidades">Paris</p>
                         <p class="texto-qualidades">100+ Tours</p>
                     </div>
                     <div class="destinos">
-                        <img class="img-destinos" src="./assets/image (1).png" alt="">
+                        <img class="img-destinos" src="./assets/img/image (1).png" alt="">
                         <p class="titulo-qualidades">Singapore</p>
                         <p class="texto-qualidades">300+ Tours</p>
                     </div>
                     <div class="destinos">
-                        <img class="img-destinos" src="./assets/image (2).png" alt="">
+                        <img class="img-destinos" src="./assets/img/image (2).png" alt="">
                         <p class="titulo-qualidades">Roma</p>
                         <p class="texto-qualidades">400+ Tours</p>
                     </div>
                     <div class="destinos">
-                        <img class="img-destinos" src="./assets/image (3).png" alt="">
+                        <img class="img-destinos" src="./assets/img/image (3).png" alt="">
                         <p class="titulo-qualidades">Bangkok</p>
                         <p class="texto-qualidades">100+ Tours</p>
                     </div>
                     <div class="destinos">
-                        <img class="img-destinos" src="./assets/image (4).png" alt="">
+                        <img class="img-destinos" src="./assets/img/image (4).png" alt="">
                         <p class="titulo-qualidades">Bail</p>
                         <p class="texto-qualidades">600+ Tours</p>
                     </div>
                     <div class="destinos">
-                        <img class="img-destinos" src="./assets/image (5).png" alt="">
+                        <img class="img-destinos" src="./assets/img/image (5).png" alt="">
                         <p class="titulo-qualidades">Phuket</p>
                         <p class="texto-qualidades">200+ Tours</p>
                     </div>
                     <div class="destinos">
-                        <img class="img-destinos" src="./assets/image (6).png" alt="">
+                        <img class="img-destinos" src="./assets/img/image (6).png" alt="">
                         <p class="titulo-qualidades">Tokyo</p>
                         <p class="texto-qualidades">700+ Tours</p>
                     </div>
                     <div class="destinos">
-                        <img class="img-destinos" src="./assets/image (7).png" alt="">
+                        <img class="img-destinos" src="./assets/img/image (7).png" alt="">
                         <p class="titulo-qualidades">Cappadocia</p>
                         <p class="texto-qualidades">900+ Tours</p>
                     </div>
@@ -194,7 +197,8 @@
                 <div class="caixa-cards">
                     <div class="card-popular">
 
-                        <div class="caixa-img-popular"><img class="img-popular" src="./assets/popular (1).png" alt="">
+                        <div class="caixa-img-popular"><img class="img-popular" src="./assets/img/popular (1).png"
+                                alt="">
                         </div>
                         <div class="caixa-texto-card">
 
@@ -209,8 +213,7 @@
                             <div class="bottom-card">
                                 <p class="subtexo-card">4 day</p>
                                 <div class="caixa-preco">
-                                    <p class="subtexo-card">From</p>
-                                    <p class="preco-card">$189.25</p>
+                                    <p class="subtexo-card">From <span class="preco-card">$189.25</span></p>
                                 </div>
                             </div>
 
@@ -221,7 +224,8 @@
 
                     <div class="card-popular">
 
-                        <div class="caixa-img-popular"><img class="img-popular" src="./assets/popular (2).png" alt="">
+                        <div class="caixa-img-popular"><img class="img-popular" src="./assets/img/popular (2).png"
+                                alt="">
                         </div>
                         <div class="caixa-texto-card">
 
@@ -237,8 +241,7 @@
                             <div class="bottom-card">
                                 <p class="subtexo-card">4 day</p>
                                 <div class="caixa-preco">
-                                    <p class="subtexo-card">From</p>
-                                    <p class="preco-card">$225</p>
+                                    <p class="subtexo-card">From <span class="preco-card">$255</span></p>
                                 </div>
                             </div>
 
@@ -247,7 +250,8 @@
 
                     <div class="card-popular">
 
-                        <div class="caixa-img-popular"><img class="img-popular" src="./assets/popular (3).png" alt="">
+                        <div class="caixa-img-popular"><img class="img-popular" src="./assets/img/popular (3).png"
+                                alt="">
                         </div>
                         <div class="caixa-texto-card">
 
@@ -263,8 +267,7 @@
                             <div class="bottom-card">
                                 <p class="subtexo-card">4 day</p>
                                 <div class="caixa-preco">
-                                    <p class="subtexo-card">From</p>
-                                    <p class="preco-card">$945</p>
+                                    <p class="subtexo-card">From <span class="preco-card">$945</span></p>
                                 </div>
                             </div>
 
@@ -276,7 +279,8 @@
 
                     <div class="card-popular">
 
-                        <div class="caixa-img-popular"><img class="img-popular" src="./assets/popular (4).png" alt="">
+                        <div class="caixa-img-popular"><img class="img-popular" src="./assets/img/popular (4).png"
+                                alt="">
                         </div>
                         <div class="caixa-texto-card">
 
@@ -292,8 +296,7 @@
                             <div class="bottom-card">
                                 <p class="subtexo-card">4 day</p>
                                 <div class="caixa-preco">
-                                    <p class="subtexo-card">From</p>
-                                    <p class="preco-card">$771</p>
+                                    <p class="subtexo-card">From <span class="preco-card">$771</span></p>
                                 </div>
                             </div>
 
@@ -301,7 +304,8 @@
                     </div>
                     <div class="card-popular">
 
-                        <div class="caixa-img-popular"><img class="img-popular" src="./assets/popular (5).png" alt="">
+                        <div class="caixa-img-popular"><img class="img-popular" src="./assets/img/popular (5).png"
+                                alt="">
                         </div>
                         <div class="caixa-texto-card">
 
@@ -317,8 +321,7 @@
                             <div class="bottom-card">
                                 <p class="subtexo-card">4 day</p>
                                 <div class="caixa-preco">
-                                    <p class="subtexo-card">From</p>
-                                    <p class="preco-card">$189.25</p>
+                                    <p class="subtexo-card">From <span class="preco-card">$189.25</span></p>
                                 </div>
                             </div>
 
@@ -327,7 +330,8 @@
 
                     <div class="card-popular">
 
-                        <div class="caixa-img-popular"><img class="img-popular" src="./assets/popular (6).png" alt="">
+                        <div class="caixa-img-popular"><img class="img-popular" src="./assets/img/popular (6).png"
+                                alt="">
                         </div>
                         <div class="caixa-texto-card">
 
@@ -343,8 +347,7 @@
                             <div class="bottom-card">
                                 <p class="subtexo-card">4 day</p>
                                 <div class="caixa-preco">
-                                    <p class="subtexo-card">From</p>
-                                    <p class="preco-card">$255</p>
+                                    <p class="subtexo-card">From <span class="preco-card">$255</span></p>
                                 </div>
                             </div>
 
@@ -353,7 +356,8 @@
 
                     <div class="card-popular">
 
-                        <div class="caixa-img-popular"><img class="img-popular" src="./assets/popular (7).png" alt="">
+                        <div class="caixa-img-popular"><img class="img-popular" src="./assets/img/popular (7).png"
+                                alt="">
                         </div>
                         <div class="caixa-texto-card">
 
@@ -369,8 +373,7 @@
                             <div class="bottom-card">
                                 <p class="subtexo-card">4 day</p>
                                 <div class="caixa-preco">
-                                    <p class="subtexo-card">From</p>
-                                    <p class="preco-card">$943</p>
+                                    <p class="subtexo-card">From <span class="preco-card">$943</span></p>
                                 </div>
                             </div>
 
@@ -380,7 +383,8 @@
 
                     <div class="card-popular">
 
-                        <div class="caixa-img-popular"><img class="img-popular" src="./assets/popular (8).png" alt="">
+                        <div class="caixa-img-popular"><img class="img-popular" src="./assets/img/popular (8).png"
+                                alt="">
                         </div>
                         <div class="caixa-texto-card">
 
@@ -397,8 +401,7 @@
                             <div class="bottom-card">
                                 <p class="subtexo-card">4 day</p>
                                 <div class="caixa-preco">
-                                    <p class="subtexo-card">From</p>
-                                    <p class="preco-card">$771</p>
+                                    <p class="subtexo-card">From <span class="preco-card">$771</span></p>
                                 </div>
                             </div>
 
@@ -409,7 +412,25 @@
             </div>
         </section>
         <section class="section-desconto">
-            
+            <div class="caixa-descontos">
+
+                <div class="textos-desconto">
+                    <div class="caixa-titulo-descontos">
+                        <p class="texto-titulo-descontos">
+                            Grab up to <span class="desconto-span">35% off</span>
+                            on your favorite
+                            Destination
+                        </p>
+                    </div>
+                    <p class="subtitulo-descontos">Limited time offer, don't miss the opportunity</p>
+                    <button class="btn-descontos">Book Now</button>
+                </div>
+
+                <div class="caixa-img-descontos">
+                    <img class="img-descontos" src="./assets/img/img-descontos.png" alt="">
+                </div>
+
+            </div>
         </section>
     </main>
     <footer>
