--- a/index.html
+++ b/index.html
@@ -432,6 +432,148 @@
 
             </div>
         </section>
+        <section class="section-bottom">
+            <div class="continuacerto">
+                <div class="estrutura-titulo">
+                    <p class="titulo-primario">
+                        Top Trending
+                    </p>
+                </div>
+                <div class="caixa-cards">
+                    <div class="card-popular">
+
+                        <div class="caixa-img-popular"><img class="img-popular" src="./assets/img/popular (1).png"
+                                alt="">
+                        </div>
+                        <div class="caixa-texto-card">
+
+                            <div class="localidade-card">
+                                <p class="texto-localidade-card">Paris, France</p>
+                            </div>
+
+                            <p class="titulo-card">Centipede Tour - Guided Arizona Desert Tour by ATV</p>
+                            <p class="subtexo-card">4.8(243)</p>
+                            <hr>
+
+                            <div class="bottom-card">
+                                <p class="subtexo-card">4 day</p>
+                                <div class="caixa-preco">
+                                    <p class="subtexo-card">From <span class="preco-card">$189.25</span></p>
+                                </div>
+                            </div>
+
+                        </div>
+
+
+                    </div>
+
+                    <div class="card-popular">
+
+                        <div class="caixa-img-popular"><img class="img-popular" src="./assets/img/popular (2).png"
+                                alt="">
+                        </div>
+                        <div class="caixa-texto-card">
+
+                            <div class="localidade-card">
+                                <p class="texto-localidade-card">New York, USA</p>
+                            </div>
+
+                            <p class="titulo-card">Molokini and Turtle Town
+                                Snorkeling Adventure Aboard</p>
+                            <p class="subtexo-card">4.8(243)</p>
+                            <hr>
+
+                            <div class="bottom-card">
+                                <p class="subtexo-card">4 day</p>
+                                <div class="caixa-preco">
+                                    <p class="subtexo-card">From <span class="preco-card">$255</span></p>
+                                </div>
+                            </div>
+
+                        </div>
+                    </div>
+
+                    <div class="card-popular">
+
+                        <div class="caixa-img-popular"><img class="img-popular" src="./assets/img/popular (3).png"
+                                alt="">
+                        </div>
+                        <div class="caixa-texto-card">
+
+                            <div class="localidade-card">
+                                <p class="texto-localidade-card">London, UK</p>
+                            </div>
+
+                            <p class="titulo-card">Westminster Walking Tour &
+                                Westminster Abbey Entry</p>
+                            <p class="subtexo-card">4.8(243)</p>
+                            <hr>
+
+                            <div class="bottom-card">
+                                <p class="subtexo-card">4 day</p>
+                                <div class="caixa-preco">
+                                    <p class="subtexo-card">From <span class="preco-card">$945</span></p>
+                                </div>
+                            </div>
+
+                        </div>
+
+
+
+                    </div>
+
+                    <div class="card-popular">
+
+                        <div class="caixa-img-popular"><img class="img-popular" src="./assets/img/popular (4).png"
+                                alt="">
+                        </div>
+                        <div class="caixa-texto-card">
+
+                            <div class="localidade-card">
+                                <p class="texto-localidade-card">Paris, France</p>
+                            </div>
+
+                            <p class="titulo-card">All Inclusive Ultimate Circle Island
+                                Day Tour with Lunch</p>
+                            <p class="subtexo-card">4.8(243)</p>
+                            <hr>
+
+                            <div class="bottom-card">
+                                <p class="subtexo-card">4 day</p>
+                                <div class="caixa-preco">
+                                    <p class="subtexo-card">From <span class="preco-card">$771</span></p>
+                                </div>
+                            </div>
+
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="section-reviews">
+            <div class="caixa-reviews">
+                <div class="titulo-reviews">
+                    <p>Customer Reviews</p>
+                </div>
+                <div class="img-review">
+                    <img src="./assets/img/review.png" alt="">
+                </div>
+                <div class="texto-review">
+                    <p>Excellent Service!</p>
+                    <p>I had an amazing experience with this company. The service was
+                        top-notch, and the staff was incredibly friendly. I highly
+                        recommend them!
+                    </p>
+                </div>
+                <div class="texto-usuario">
+                    <p>John Smith</p>
+                    <p>Traveler</p>
+                </div>
+
+
+            </div>
+        </section>
+
     </main>
     <footer>
 
