--- a/index.html
+++ b/index.html
@@ -597,10 +597,150 @@
                 </div>
             </div>
         </section>
+        <section class="section-travel">
 
+            <div class="caixa-travel">
+                <div class="estrutura-titulo">
+                    <p class="titulo-primario">
+                        Travel Articles
+                    </p>
+                </div>
+                <div class="caixa-img-travel">
+                    <div class="camelo">
+                        <img src="./assets/img/travel (1).png" alt="">
+                        <div class="textos-travel">
+                            <div class="data-by-travels">
+                                <p class="texto-data-travels">April 06 2023</p>
+                                <p class="texto-by-travels">By Ali Tufan</p>
+                            </div>
+                            <p class="sobre-travels">Kenya vs Tanzania Safari: The Better African
+                                Safari Experience</p>
+                        </div>
+
+                    </div>
+                    <div class="montanha">
+                        <img src="./assets/img/travel (2).png" alt="">
+                        <div class="textos-travel">
+                            <div class="data-by-travels">
+                                <p class="texto-data-travels">April 06 2023</p>
+                                <p class="texto-by-travels">By Ali Tufan</p>
+                            </div>
+                            <p class="sobre-travels">Kenya vs Tanzania Safari: The Better African
+                                Safari Experience</p>
+                        </div>
+
+                    </div>
+                    <div class="balanco">
+                        <img src="./assets/img/travel (3).png" alt="">
+                        <div class="textos-travel">
+                            <div class="data-by-travels">
+                                <p class="texto-data-travels">April 06 2023</p>
+                                <p class="texto-by-travels">By Ali Tufan</p>
+                            </div>
+                            <p class="sobre-travels">Kenya vs Tanzania Safari: The Better African
+                                Safari Experience</p>
+                        </div>
+
+                    </div>
+
+                </div>
+
+            </div>
+        </section>
     </main>
     <footer>
-
+        <div class="caixa-footer">
+            <div class="caixa-footer-numero">
+                <p class="footer-numero">Speak to our expert at <span class="numero">1-800-453-6744</span>
+                </p>
+                <p class="siga">Follow Us</p>
+            </div>
+            <hr>
+            <div class="caixa-info-footer">
+                <div class="contact">
+                    <p class="titulo-info-footer">
+                        Contact
+                    </p>
+                    <p class="texto-info-footer">
+                        328 Queensberry Street, North Melbourne VIC3051,
+                        Australia.
+                    </p>
+                    <p class="texto-info-footer">
+                        hi@viatours.com
+                    </p>
+                </div>
+                <div class="company">
+                    <p class="titulo-info-footer">
+                        Company
+                    </p>
+                    <p class="texto-info-footer">
+                        About Us
+                    </p>
+                    <p class="texto-info-footer">
+                        Tourz Reviews
+                    </p>
+                    <p class="texto-info-footer">
+                        Contact Us
+                    </p>
+                    <p class="texto-info-footer">
+                        Travel Guides
+                    </p>
+                    <p class="texto-info-footer">
+                        Data Policy
+                    </p>
+                    <p class="texto-info-footer">
+                        Cookie Policy
+                    </p>
+                    <p class="texto-info-footer">
+                        Legal
+                    </p>
+                    <p class="texto-info-footer">
+                        Sitemap
+                    </p>
+                </div>
+                <div class="support">
+                    <p class="titulo-info-footer">
+                        Support
+                    </p>
+                    <p class="texto-info-footer">
+                        Get in Touch
+                    </p>
+                    <p class="texto-info-footer">
+                        Help center
+                    </p>
+                    <p class="texto-info-footer">
+                        Live chat
+                    </p>
+                    <p class="texto-info-footer">
+                        How it works
+                    </p>
+                    <p class="texto-info-footer">
+                        Data Policy
+                    </p>
+                </div>
+                <div class="newsletter">
+                    <p class="titulo-info-footer">
+                        Newsletter
+                    </p>
+                    <p class="texto-info-footer">
+                        Subscribe to the free newsletter and stay
+                        up to date
+                    </p>
+                    <div class="caixa-pesquisa-email">
+                        <input type="text" placeholder="Your email address">
+                    </div>
+                    <p class="titulo-ifo-footer">
+                        Mobile Apps
+                    </p>
+                    <p class="texto-info-footer">
+                        iOS App
+                    </p>
+                    <p class="texto-info-footer">
+                        Android App
+                    </p>
+                </div>
+            </div>
+        </div>
     </footer>
 </body>
 
