--- a/index.html
+++ b/index.html
@@ -661,11 +661,11 @@
                     <p class="titulo-info-footer">
                         Contact
                     </p>
-                    <p class="texto-info-footer">
+                    <p class="texto-info-footer-contact">
                         328 Queensberry Street, North Melbourne VIC3051,
                         Australia.
                     </p>
-                    <p class="texto-info-footer">
+                    <p class="texto-info-footer-contact">
                         hi@viatours.com
                     </p>
                 </div>
@@ -729,7 +729,7 @@
                     <div class="caixa-pesquisa-email">
                         <input type="text" placeholder="Your email address">
                     </div>
-                    <p class="titulo-ifo-footer">
+                    <p class="titulo-info-footer">
                         Mobile Apps
                     </p>
                     <p class="texto-info-footer">
