atualizando fim do site

--- a/index.html
+++ b/index.html
@@ -193,6 +193,9 @@
                     <p class="titulo-primario">
                         Find Popular Tours
                     </p>
+                    <p class="veja-tudo">
+                        See all
+                    </p>
                 </div>
                 <div class="caixa-cards">
                     <div class="grupo-card">
@@ -443,6 +446,9 @@
                         <p class="titulo-primario">
                             Top Trending
                         </p>
+                        <p class="veja-tudo">
+                        See all
+                    </p>
                     </div>
                     <div class="caixa-cards-top">
                         <div class="grupo-card-top">
@@ -604,6 +610,9 @@
                     <p class="titulo-primario">
                         Travel Articles
                     </p>
+                    <p class="veja-tudo">
+                        See all
+                    </p>
                 </div>
                 <div class="caixa-img-travel">
                     <div class="camelo">
@@ -655,7 +664,7 @@
                 </p>
                 <p class="siga">Follow Us</p>
             </div>
-            <hr>
+            <hr class="linha-footer">
             <div class="caixa-info-footer">
                 <div class="contact">
                     <p class="titulo-info-footer">
@@ -727,7 +736,7 @@
                         up to date
                     </p>
                     <div class="caixa-pesquisa-email">
-                        <input type="text" placeholder="Your email address">
+                        <input class="pesquisa-email" type="text" placeholder="Your email address">
                     </div>
                     <p class="titulo-info-footer">
                         Mobile Apps
@@ -739,6 +748,20 @@
                         Android App
                     </p>
                 </div>
+            </div>
+
+        </div>
+        <div class="rodape">
+            <p class="texto-rodape">
+                © Copyright Viatours 2024
+            </p>
+            <div class="pagamentos">
+                <img src="./assets/img/pagameto (1).png" alt="" class="imgs-pagamento">
+                <img src="./assets/img/pagameto (2).png" alt="" class="imgs-pagamento">
+                <img src="./assets/img/pagameto (3).png" alt="" class="imgs-pagamento">
+                <img src="./assets/img/pagameto (4).png" alt="" class="imgs-pagamento">
+                <img src="./assets/img/pagameto (5).png" alt="" class="imgs-pagamento">
+                <img src="./assets/img/pagameto (6).png" alt="" class="imgs-pagamento">
             </div>
         </div>
     </footer>
